--- a/index.html
+++ b/index.html
@@ -62,7 +62,21 @@ form p:nth-child(1){
     float: none;
 }
 
+@media (min-width: 770px) {
+    .panel {
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
 
+@media (min-width: 1000px) {
+    .panel {
+        width: 30%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
   </style>
 </head>
 <body>
